--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,16 @@
+* {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+}
 
+:root{
+    --mainBlue: #2a2a72;
+    --lightBlue: #009ffd;
+    --mainWhite: #f3f3f3;
+    --mainDark: #232528;
+    --mainYellow: #ffa400;
+}
 .navBlue .nav-link {
     color: black !important;
     font-size: 1.3rem;
@@ -18,7 +30,7 @@
 .search-zone {
     width: 100%;
     padding: 20px;
-    background-color: rgb(36, 45, 126);
+    background-color: var(--mainBlue);
     color: white;
     display: flex;
     align-items: center;
@@ -28,4 +40,16 @@
 img {
     height: 50px;
     width: 50px;
+}
+.card {
+    width: 16rem;
+}
+
+.infoImg {
+    height: 200px;
+    width: 200px;
+}
+
+.ml {
+    margin-left: 100px;
 }
